--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Rxjs lifegame</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-          .raw {
+          .row {
             height: 10px;
           }
           .cell,
